--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "framer-motion": "^10.12.16",
+    "motion": "^10.16.2",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
