--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-plx": "^2.1.2"
   }
 }
