--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.12.16",
     "motion": "^10.16.2",
     "next": "13.4.6",
+    "next-intl": "^2.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.2",
